@@ -1,9 +1,9 @@
 # Generated by mksrcinfo v8
-# Thu Feb 15 06:15:23 UTC 2018
-pkgbase = return-to-the-roots
+# Thu Feb 15 15:40:23 UTC 2018
+pkgbase = return-to-the-roots-git
 	pkgdesc = Free/libre implementation of The Settlers II game engine
 	pkgver = r3863.e340f253
-	pkgrel = 1
+	pkgrel = 2
 	url = https://siedler25.org/
 	install = return-to-the-roots.install
 	changelog = ChangeLog
@@ -19,6 +19,8 @@ pkgbase = return-to-the-roots
 	depends = sdl_mixer
 	depends = miniupnpc
 	depends = boost-libs
+	provides = return-to-the-roots
+	conflicts = return-to-the-roots
 	conflicts = s25rttr
 	conflicts = s25rttr-nightly-bin
 	source = git+https://github.com/Return-To-The-Roots/s25client.git
@@ -50,5 +52,5 @@ pkgbase = return-to-the-roots
 	sha256sums = b623d74292ca332b65290f15adb0c41994a80eb4f5d247c713a0d43775f9e8f8
 	sha256sums = edb41253442928a2313f856021c06f6d2999b780f0426c05cd7bdb2381a627ea
 
-pkgname = return-to-the-roots
+pkgname = return-to-the-roots-git
 
